syntax = "proto3";

option go_package = "simple";

package simple;

import "google/protobuf/timestamp.proto";

service TradeEngine {
  // A simple RPC.
  rpc sendOrder(OrderMessage) returns (Empty) {}
  rpc GetOrderStream(Empty) returns (stream OrderMessage) {}
  rpc GetTradeStream(Empty) returns (stream TradeMessage) {}
  rpc SendTrade(stream TradeMessage) returns (Empty) {}
}

message Empty {

}

message OrderMessage {
  int32 id = 1;
  uint64 price = 2;
  uint32 quantity = 3;
  string type = 4;
}

message TradeMessage {
  int32 id = 1;
  int32 price = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp createdTime = 4;
}
